# Parallel_Labs

./: .gitignore  CMakeLists.txt  main.cpp
lab1/src/: CoreUtils.h  main.cpp
lab2/: ParalellQSort.cpp  qsort.cpp
lab2/src/: BasicIteration.cpp  EachParallel.cpp  PalrallelOnce.cpp  PalrallelOnceAndSchedule.cpp
lab3/: RandomMatrixInit.cpp  lab3  lab3.cpp
lab4/src/: main.cpp
lab5/src/: LockingQueue.h  Task.h  main.cpp
